@@ -4,7 +4,8 @@ weewx change history
 2.4.0 07/XX/13
 
 The configuration utility wee_config_vantage now allows you to set
-DST to 'auto', 'off', or 'on'.
+DST to 'auto', 'off', or 'on'. It also lets you set either a time
+zone code, or a time zone offset.
 
 The service StdTimeSync now catches startup events and syncs the clock
 on them. It has now been moved to the beginning of the list
